2011-01-25  Robert Larice
 * Modified src/include/cmproto.h ,
 * Modified src/xspice/icm/dlmain.c ,
 * Modified src/xspice/icm/digital/d_source/cfunc.mod ,
 * Modified src/xspice/icm/digital/d_state/cfunc.mod ,
 * Modified tests/bin/check.sh ,
 * Added    tests/bin/spinit ,
 * Modified tests/bsim3/dc_sim/Makefile.am ,
 * Modified tests/bsim3soi/Makefile.am ,
 * Modified tests/bsim3soidd/Makefile.am ,
 * Modified tests/bsim3soifd/Makefile.am ,
 * Modified tests/bsim3soipd/Makefile.am ,
 * Modified tests/bsim4/Makefile.am ,
 * Modified tests/xspice/digital/Makefile.am ,
 * Modified tests/xspice/digital/spinit.in :
    fix `make check' for build in a separate directory

2011-01-25  Robert Larice
 * Modified configure.ac ,
 * Modified src/xspice/Makefile.am ,
 * Added    src/xspice/icm/GNUmakefile.in ,
 * Removed  src/xspice/icm/Makefile ,
 * Modified src/xspice/icm/makedefs.in ,
 * Removed  src/xspice/icm/modpath.lst ,
 * Removed  src/xspice/icm/objects.inc :
    rework the xspice/icm Makefile for build in a separate directory
    the new makefile requires GNU make

2011-01-25  Robert Larice
 * src/xspice/cmpp/cmpp.h ,
 * src/xspice/cmpp/pp_lst.c ,
 * src/xspice/cmpp/pp_mod.c ,
 * src/xspice/cmpp/read_ifs.c ,
 * src/xspice/cmpp/util.c ,
 * src/xspice/cmpp/writ_ifs.c :
   prepare the xspice cmpp processor for build in a separate directory
   Two environment variables are introduced to augment the the hardwired
     filenames with directory names

2011-01-25  Robert Larice
 * src/frontend/Makefile.am ,
 * src/spicelib/devices/adms/admst/ngspiceMakefile.am.xml
 * src/spicelib/parser/Makefile.am
   small fixes to make some `Makefiles' ready for build in a separate directory

11-01-18 Holger Vogt
 * plotcurv.c: line 139 test for existance of v_plot before comparing 
  pl_scale
  
11-01-16 Holger Vogt
 * com_cdump.c: remove compiler warnings
 * 1-f-code.c, 1-f-code.h, vsrc.c, vsrcacct.c, vsrcdefs.h,
   vsrcload.c, vsrcpar.c, examples/opwien.sp: