@@ -13,28 +13,39 @@ Author: 1992 Charles Hough
 #include "suffix.h"
 
 
+static void copy_coeffs(double **dst, IFvalue *value)
+{
+    if(*dst)
+        tfree(*dst);
+
+    *dst = TMALLOC(double, value->v.numValue);
+
+    memcpy(*dst, value->v.vec.rVec, value->v.numValue * sizeof(double));
+}
+
+
 int
 CPLmParam(int param, IFvalue *value, GENmodel *inModel)
 {
     register CPLmodel *model = (CPLmodel *)inModel;
     switch(param) {
         case CPL_R:
-            model->Rm = value->v.vec.rVec;
+            copy_coeffs(& model->Rm, value);
             model->Rm_counter = value->v.numValue;
             model->Rmgiven = TRUE;
             break;
         case CPL_L:
-            model->Lm = value->v.vec.rVec;
+            copy_coeffs(& model->Lm, value);
             model->Lm_counter = value->v.numValue;
             model->Lmgiven = TRUE;
             break;
         case CPL_G:
-            model->Gm = value->v.vec.rVec;
+            copy_coeffs(& model->Gm, value);
             model->Gm_counter = value->v.numValue;
             model->Gmgiven = TRUE;
             break;
         case CPL_C:
-            model->Cm = value->v.vec.rVec;
+            copy_coeffs(& model->Cm, value);
             model->Cm_counter = value->v.numValue;
             model->Cmgiven = TRUE;
             break;
